<?xml version="1.0"?>
<package>
  <name>nordbo_lrs6</name>
  <version>0.0.0</version>
  <description>The NordboFT package</description>


  <maintainer email="kevin.galassi2@unibo.it">Kevin Galassi.</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
